# mercenary

./: CMakeLists.txt  ircclient.pro
guiapp/: CMakeLists.txt  chatwindow.h  chatwindow.ui  guiapp.pro  guiapp_en.ts  main.cpp  messagehandler.cpp  messagehandler.h
mirc/: CMakeLists.txt  mirc.pro  test.mrc
mirc/includes/: mirc.h  parser.h  script.h
mirc/src/: main.cpp  mirc.cpp  parser.cpp  script.cpp
src/: CMakeLists.txt  dccserver.cpp  dccserver.h  ircclient.cpp  ircclient.h
testapp/: CMakeLists.txt  main.cpp  testapp.cpp  testapp.h  testapp.pro
